test/conv/unsigned_signed_implicit.vp
//! stage: check
//! expect-compile: error

pub fn main() : void
{
    var a : uint16 = 5;
    var b : int16 = a;   // error: no implicit unsigned->signed
}